# langchain-playground

./: .env.example  .gitignore  Dockerfile  pyproject.toml
app/: dependencies.py  main.py
